--- a/src/Home.css
+++ b/src/Home.css
@@ -49,8 +49,12 @@ z-index: 1;
 }
 
 [data-theme="dark"] .home-header-new {
-background: linear-gradient(135deg, #3730a3 0%, #5b21b6 100%);
+background: linear-gradient(135deg, #30a34e 0%, #5b21b6 100%);
 box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+}
+
+[data-theme="dark"] .add-payment-button{
+background: linear-gradient(135deg, #30a34e 0%, #5b21b6 100%);
 }
 
 .header-content {
@@ -249,7 +253,8 @@ box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
 [data-theme="dark"] .mode-simple-button.active {
-background: #f8fafc;
+    background: linear-gradient(
+        135deg, #30a353 0%, #5b21b6 100%);
 }
 
 .mode-simple-text {
@@ -268,7 +273,7 @@ color: rgba(255, 255, 255, 0.8);
 }
 
 [data-theme="dark"] .mode-simple-button.active .mode-simple-text {
-color: #3730a3;
+color: #ffffff;
 }
 
 /* ====================== */
@@ -320,8 +325,8 @@ margin-left: 10px;
 }
 
 .currency-content {
-display: flex;
-justify-content: space-between;
+display: inline-grid;
+justify-content: center;
 align-items: center;
 width: 100%;
 }
@@ -1086,7 +1091,7 @@ margin-top: 8px;
 }
 
 [data-theme="dark"] .security-info {
-background: rgba(102, 126, 234, 0.1);
+ background: linear-gradient(135deg, #30a353 0%, #5b21b6 100%);
 border-color: rgba(102, 126, 234, 0.2);
 }
 
